charts/cluster-upgrade.yaml
---
# Source: cluster-upgrade/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: RELEASE-NAME-cluster-upgrade
  labels:
    app.kubernetes.io/name: cluster-upgrade
    helm.sh/chart: cluster-upgrade-0.209505439.4
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/version: "1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: cluster-upgrade
      app.kubernetes.io/instance: RELEASE-NAME
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cluster-upgrade
        app.kubernetes.io/instance: RELEASE-NAME
      annotations:
        iam.amazonaws.com/role: "orvn--cluster-upgrade"
        ad.datadoghq.com/cluster-upgrade.check_names: |
          ["openmetrics"]
        ad.datadoghq.com/cluster-upgrade.init_configs: |
          [{}]
        ad.datadoghq.com/cluster-upgrade.instances: |
          [
            {
              "prometheus_url": "http://%%host%%:9404/metrics",
              "namespace": "cluster-upgrade",
              "metrics": ["java_*", "jvm_*", "kafka_*", "process_*"]
            }
          ]
    spec:
      serviceAccountName: cluster-upgrade-sa
      securityContext:
        {}
      containers:
        - name: cluster-upgrade
          securityContext:
            {}
          image: "registry.gitlab.com/openraven/open/cluster-upgrade:209505439"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            initialDelaySeconds: 15
            httpGet:
              path: /actuator/health
              port: 8080
          readinessProbe:
            initialDelaySeconds: 15
            httpGet:
              path: /actuator/health
              port: 8080
          resources:
            limits:
              memory: 2Gi
            requests:
              memory: 2Gi
