charts/dmap-scheduler.yaml
---
# Source: dmap-scheduler/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: RELEASE-NAME-dmap-scheduler
  labels:
    app.kubernetes.io/name: dmap-scheduler
    helm.sh/chart: dmap-scheduler-0.268015721.0
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/version: "1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: dmap-scheduler
      app.kubernetes.io/instance: RELEASE-NAME
  template:
    metadata:
      labels:
        app.kubernetes.io/name: dmap-scheduler
        app.kubernetes.io/instance: RELEASE-NAME
      annotations:
        ad.datadoghq.com/dmap-scheduler.check_names: |
          ["openmetrics"]
        ad.datadoghq.com/dmap-scheduler.init_configs: |
          [{}]
        ad.datadoghq.com/dmap-scheduler.instances: |
          [
            {
              "prometheus_url": "http://%%host%%:9404/metrics",
              "namespace": "dmap-scheduler",
              "metrics": ["java_*", "jvm_*", "kafka_*", "process_*"]
            }
          ]
        iam.amazonaws.com/role: "orvn--dmap-scheduler"
    spec:
      serviceAccountName: default
      securityContext:
        {}
      containers:
        - name: dmap-scheduler
          securityContext:
            {}
          image: "registry.gitlab.com/openraven/open/dmap-scheduler-repo-docker:268015721"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
          resources:
            limits:
              memory: 2Gi
            requests:
              memory: 2Gi
