charts/etcd-prune.yaml
---
# Source: etcd-prune/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: RELEASE-NAME-etcd-prune
  labels:
    helm.sh/chart: etcd-prune-0.1.0
    app.kubernetes.io/name: etcd-prune
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: etcd-prune
      app.kubernetes.io/instance: RELEASE-NAME
  template:
    metadata:
      labels:
        app.kubernetes.io/name: etcd-prune
        app.kubernetes.io/instance: RELEASE-NAME
    spec:
      containers:
        - name: etcd-prune
          image: "docker.io/library/python:3.8"
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: 128Mi
            requests:
              memory: 64Mi
          command:
          - /bin/bash
          - -ec
          # language=sh
          - |
            SLEEP_SECS=$(expr "$HOST_IP" : '.*\([0-9]\)$' || true)
            # we want to keep two prunes from running simultaneously
            export SLEEP_SECS
            echo "$WATCH_SH" > etcd_watch.sh
            chmod 755          etcd_watch.sh
            unset WATCH_SH
            echo "$PRUNE_SH" > etcd_prune.sh
            chmod 755          etcd_prune.sh
            unset PRUNE_SH
            PATH=$PATH:/opt/bin
            export ETCDCTL_API
            export ETCDCTL_CACERT
            export ETCDCTL_CERT
            export ETCDCTL_KEY
            # etcdctl does not pass along these vars into the subprocess
            # (perhaps understandably) so we have to manually make them available
            printenv | sed -ne '/^ETCDCTL_/s/^/export /p' > etcdctl.env
            # the "grep Key" is to keep etcdctl from dumping the WATCH_KEY to stdout
            # as it's still in binary (the JSON output is better, but huge)
            /opt/bin/etcdctl watch --prefix=true --write-out=simple /registry/minions -- ./etcd_watch.sh | grep Key
          volumeMounts:
          - mountPath: /opt
            name: opt
            readOnly: true
          - mountPath: /etc/kubernetes/pki/etcd
            name: pki-etcd
            readOnly: true
      volumes:
      - hostPath:
          path: /opt
          type: Directory
        name: opt
      - hostPath:
          path: /etc/kubernetes/pki/etcd
          type: Directory
        name: pki-etcd
      hostNetwork: true
      nodeSelector:
        node-role.kubernetes.io/master: ""
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - topologyKey: kubernetes.io/hostname
      tolerations:
        - effect: NoSchedule
          operator: Exists
