charts/account-management.yaml
---
# Source: account-management/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: RELEASE-NAME-account-management
  labels:
    app.kubernetes.io/name: account-management
    helm.sh/chart: account-management-0.257894263.0
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/version: "1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: account-management
    app.kubernetes.io/instance: RELEASE-NAME
---
# Source: account-management/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: RELEASE-NAME-account-management
  labels:
    app.kubernetes.io/name: account-management
    helm.sh/chart: account-management-0.257894263.0
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/version: "1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: account-management
      app.kubernetes.io/instance: RELEASE-NAME
  template:
    metadata:
      labels:
        app.kubernetes.io/name: account-management
        app.kubernetes.io/instance: RELEASE-NAME
      annotations:
        ad.datadoghq.com/account-management.check_names: |
          ["openmetrics"]
        ad.datadoghq.com/account-management.init_configs: |
          [{}]
        ad.datadoghq.com/account-management.instances: |
          [
            {
              "prometheus_url": "http://%%host%%:8080/actuator/prometheus",
              "namespace": "account-management",
              "metrics": ["*"]
            }
          ]
    spec:
      serviceAccountName: default
      securityContext:
        {}
      containers:
        - name: account-management
          securityContext:
            {}
          image: "registry.gitlab.com/openraven/open/account-management:257894263"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            initialDelaySeconds: 15
            httpGet:
              path: /actuator/health
              port: 8080
          readinessProbe:
            initialDelaySeconds: 15
            httpGet:
              path: /actuator/health
              port: 8080
          resources:
            limits:
              memory: 512Mi
            requests:
              memory: 512Mi
---
# Source: account-management/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: RELEASE-NAME-account-management
  labels:
    app.kubernetes.io/name: account-management
    helm.sh/chart: account-management-0.257894263.0
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/version: "1.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    nginx.ingress.kubernetes.io/auth-response-headers: x-auth-request-user, x-auth-request-email, x-auth-request-access-token
    nginx.ingress.kubernetes.io/auth-url: https://$host/oauth2/auth
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header cookie "";
      auth_request_set $auth_cookie $upstream_http_set_cookie;
      add_header Set-Cookie $auth_cookie;
      auth_request_set $bearer_token $upstream_http_x_auth_request_access_token;
      proxy_set_header authorization 'Bearer $bearer_token';
spec:
  rules:
    - host: 
      http:
        paths:
          - path: /api/user
            backend:
              serviceName: RELEASE-NAME-account-management
              servicePort: 80
          - path: /api/orgs
            backend:
              serviceName: RELEASE-NAME-account-management
              servicePort: 80
          - path: /api/server
            backend:
              serviceName: RELEASE-NAME-account-management
              servicePort: 80
          - path: /api/scan
            backend:
              serviceName: RELEASE-NAME-account-management
              servicePort: 80
          - path: /api/cloudwatcher
            backend:
              serviceName: RELEASE-NAME-account-management
              servicePort: 80
          - path: /api/integrations
            backend:
              serviceName: RELEASE-NAME-account-management
              servicePort: 80
---
# Source: account-management/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "RELEASE-NAME-account-management-test-connection"
  labels:
    app.kubernetes.io/name: account-management
    helm.sh/chart: account-management-0.257894263.0
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/version: "1.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args:  ['RELEASE-NAME-account-management:80']
  restartPolicy: Never
