charts/asset-groups.yaml
---
# Source: asset-groups/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: RELEASE-NAME-asset-groups
  labels:
    app.kubernetes.io/name: asset-groups
    helm.sh/chart: asset-groups-0.268013712.0
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/version: "1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: asset-groups
    app.kubernetes.io/instance: RELEASE-NAME
---
# Source: asset-groups/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: RELEASE-NAME-asset-groups
  labels:
    app.kubernetes.io/name: asset-groups
    helm.sh/chart: asset-groups-0.268013712.0
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/version: "1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: asset-groups
      app.kubernetes.io/instance: RELEASE-NAME
  template:
    metadata:
      labels:
        app.kubernetes.io/name: asset-groups
        app.kubernetes.io/instance: RELEASE-NAME
      annotations:
        ad.datadoghq.com/asset-groups.check_names: |
          ["openmetrics"]
        ad.datadoghq.com/asset-groups.init_configs: |
          [{}]
        ad.datadoghq.com/asset-groups.instances: |
          [
            {
              "prometheus_url": "http://%%host%%:8080/actuator/prometheus",
              "namespace": "asset-groups",
              "metrics": ["*"]
            }
          ]
    spec:
      serviceAccountName: default
      securityContext:
        {}
      containers:
        - name: asset-groups
          securityContext:
            {}
          image: "registry.gitlab.com/openraven/open/asset-groups-repo-docker:268013712"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
          resources:
            limits:
              memory: 1Gi
            requests:
              memory: 1Gi
---
# Source: asset-groups/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: RELEASE-NAME-asset-groups
  labels:
    app.kubernetes.io/name: asset-groups
    helm.sh/chart: asset-groups-0.268013712.0
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/version: "1.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    nginx.ingress.kubernetes.io/auth-url: https://$host/oauth2/auth
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header cookie "";
      auth_request_set $auth_cookie $upstream_http_set_cookie;
      add_header Set-Cookie $auth_cookie;
spec:
  rules:
    - host: 
      http:
        paths:
          - path: /api/asset-groups
            backend:
              serviceName: RELEASE-NAME-asset-groups
              servicePort: 80
