charts/elastic-search-node-client.yaml
---
# Source: elastic-search-node-client/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: RELEASE-NAME-elastic-search-node-client
  labels:
    app.kubernetes.io/name: elastic-search-node-client
    helm.sh/chart: elastic-search-node-client-0.217604975.1
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/version: "1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: elastic-search-node-client
    app.kubernetes.io/instance: RELEASE-NAME
---
# Source: elastic-search-node-client/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: RELEASE-NAME-elastic-search-node-client
  labels:
    app.kubernetes.io/name: elastic-search-node-client
    helm.sh/chart: elastic-search-node-client-0.217604975.1
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/version: "1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: elastic-search-node-client
      app.kubernetes.io/instance: RELEASE-NAME
  template:
    metadata:
      labels:
        app.kubernetes.io/name: elastic-search-node-client
        app.kubernetes.io/instance: RELEASE-NAME
    spec:
      serviceAccountName: default
      securityContext:
        {}
      containers:
        - name: elastic-search-node-client
          securityContext:
            {}
          image: "registry.gitlab.com/openraven/open/elastic-search-node-client:217604975"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /es/ping
              port: http
          readinessProbe:
            httpGet:
              path: /es/ping
              port: http
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 200m
              memory: 512Mi
---
# Source: elastic-search-node-client/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: RELEASE-NAME-elastic-search-node-client
  labels:
    app.kubernetes.io/name: elastic-search-node-client
    helm.sh/chart: elastic-search-node-client-0.217604975.1
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/version: "1.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    nginx.ingress.kubernetes.io/auth-response-headers: x-auth-request-user, x-auth-request-email, authorization, x-auth-request-access-token
    nginx.ingress.kubernetes.io/auth-url: https://$host/oauth2/auth
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header cookie "";
spec:
  rules:
    - host: 
      http:
        paths:
          - path: /es
            backend:
              serviceName: RELEASE-NAME-elastic-search-node-client
              servicePort: 80
